# abuse

./: .clang-format  .gitignore  AUTHORS  AppRun.in  BUILDING.md  CHANGELOG.md  CMakeLists.txt  NEWS  PACKAGERS  README.md  abuse.desktop.in  vcpkg.json
.github/: FUNDING.yml
data/: CMakeLists.txt  abuse.lsp
data/addon/deathmat/: dstartup.lsp
data/addon/twist/lisp/: startup.lsp
data/levels/: level00.spe
data/lisp/: duong.lsp  english.lsp  flyer.lsp  french.lsp  german.lsp  guns.lsp  people.lsp  powerup.lsp  startup.lsp  teleport.lsp  weapons.lsp
data/user/: config.txt
src/: CMakeLists.txt  ability.cpp  ability.h  ant.cpp  ant.h  automap.cpp  automap.h  begin_code.h  cache.cpp  cache.h  chars.cpp  chars.h  chat.cpp  chat.h  clisp.cpp  clisp.h  collide.cpp  common.h  compiled.cpp  compiled.h  configuration.cpp  configuration.h  console.cpp  console.h  cop.cpp  cop.h  crc.cpp  crc.h  demo.cpp  demo.h  dev.cpp  dev.h  devsel.cpp  devsel.h  director.cpp  director.h  endgame.cpp  extend.cpp  extend.h  file_utils.cpp  (+55 more)
src/imlib/: CMakeLists.txt  dprint.cpp  event.cpp  event.h  filesel.cpp  filesel.h  filter.cpp  filter.h  fonts.cpp  fonts.h  guistat.cpp  guistat.h  image.cpp  image.h  include.cpp  include.h  input.cpp  input.h  jrand.cpp  jrand.h  jwindow.cpp  jwindow.h  keys.cpp  keys.h  linked.cpp  linked.h  palette.cpp  palette.h  pcxread.cpp  pmenu.cpp  pmenu.h  scroller.cpp  scroller.h  specs.cpp  specs.h  sprite.cpp  sprite.h  status.cpp  status.h  supmorph.cpp  (+9 more)
src/lisp/: CMakeLists.txt  funcs.cpp  funcs.h  lisp.cpp  lisp.h  lisp_gc.cpp  lisp_gc.h  lisp_opt.cpp  lisp_opt.h  stack.h  symbols.h
src/lol/: matrix.cpp  matrix.h  timer.cpp  timer.h
src/net/: CMakeLists.txt  fileman.cpp  fileman.h  gclient.cpp  gclient.h  ghandler.h  gserver.cpp  gserver.h  netface.h  sock.cpp  sock.h  tcpip.cpp  tcpip.h  undrv.h
src/sdlport/: CMakeLists.txt  errorui.cpp  errorui.h  event.cpp  hmi.cpp  hmi.h  jdir.cpp  joystick.cpp  setup.cpp  setup.h  sound.cpp  sound.h  timing.cpp  video.cpp
src/tool/: AR_Help.cpp  AR_Help.h  AR_SPEC.cpp  AR_SPEC.h  abuse-tool.cpp
src/ui/: volumewindow.cpp  volumewindow.h
src/win32/: resources.rc.in
